--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <html>
-
+	<head>
+		<title>Curso de HTML e CSS</title>
+	</head>
 	<body>
 		<h1>Curso de HTML / CSS</h1>
-	</body>
 
+
+		<section>
+
+		</section>
+
+		<footer>
+			<h2>Entre em contato! </h2>
+			<img src="./img/email.jpg" width=100px>
+			<p><a href="maito:contato@contato.com">contato@contato.com</a></p>
+			<img src="./img/telefone.jpg" width=100px>
+			<p><a href="tel:12345678">12345678</a></p>
+		</footer>
+	</body>
 </html>
