--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Curso de HTML e CSS</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
+		<nav>
+			<p>Minha Pagina</p>
+
+			<ul>
+				<li><a href="#contato">Contato</a></li>
+			</ul>
+		</nav>
+
 		<h1>Curso de HTML / CSS</h1>
 
 
